ingress/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
  rules:
  - http:
    host: website.com
      paths:
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 443
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: test-service
              port:
                number: 8080
